@@ -1,0 +1,25 @@
+/*  DO NOT EDIT THIS FILE.
+
+    It has been auto-edited by fixincludes from:
+
+	"fixinc/tests/inc/fcntl.h"
+
+    This had to be done to correct non-standard usages in the
+    original, manufacturer supplied header file.  */
+
+#ifndef FIXINC_WRAP_FCNTL_H_AIX_EXTERNC
+#define FIXINC_WRAP_FCNTL_H_AIX_EXTERNC 1
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+
+#if defined( AAB_AIX_FCNTL_CHECK )
+
+#endif  /* AAB_AIX_FCNTL_CHECK */
+#ifdef __cplusplus
+}
+#endif
+
+#endif  /* FIXINC_WRAP_FCNTL_H_AIX_EXTERNC */
